# Trakova

./: .gitignore  CMakeLists.txt  CONTRIBUTING.ja.md  CONTRIBUTING.md  README.ja.md  README.md  RELEASE.md  SECURITY.md  THIRD_PARTY_LICENSES.txt
.github/: FUNDING.yml
.github/macos/: Utawave.entitlements
.github/workflows/: build.yml  release-build.yml
Distribution/: MANUAL.html  README.txt  THIRD_PARTY_LICENSES.txt
Docs/: ADS_SETUP.md  CRASH_REPORT_SETUP.md  MACOS_SIGNING_SETUP.md  MANUAL.html  SPEC.md  UPDATE_SETUP.md  WINDOWS_SIGNING_SETUP.md  help.html
Icon/: svg2png.swift
Source/: AppColours.h  AppSettings.h  Localisation.cpp  Localisation.h  Main.cpp  MainComponent.cpp  MainComponent.h  MainComponent_Commands.cpp  MainComponent_Dialogs.cpp  MainComponent_DialogsMisc.cpp  MainComponent_Plugins.cpp  MainComponent_Preferences.cpp  MainComponent_Project.cpp
Source/Audio/: AudioDeviceSettings.cpp  AudioDeviceSettings.h  AudioEngine.cpp  AudioEngine.h  AudioFileImporter.cpp  AudioFileImporter.h  BpmDetector.h  EnginePlayHead.h  LufsMeter.h  PitchEngine.cpp  PitchEngine.h  PitchShifter.h
Source/Audio/pitchcore/: PitchShiftEngine.cpp  PitchShiftEngine.h  README.md  RealFFT.h
Source/Edit/: EditActions.h  PluginActions.h  SilenceDetector.h  TrackActions.h
Source/Export/: ExportDialog.cpp  ExportDialog.h  ExportEngine.cpp  ExportEngine.h  Mp3EncoderWriter.cpp  Mp3EncoderWriter.h
Source/MIDI/: InternalSynth.cpp  InternalSynth.h  MidiExporter.cpp  MidiExporter.h  MidiImportDialog.cpp  MidiImportDialog.h  MidiImporter.cpp  MidiImporter.h
Source/Mac/: GlobalKeyMonitor.h  GlobalKeyMonitor.mm  GlobalKeyMonitor_stub.cpp
Source/Project/: AdService.cpp  AdService.h  AppPreferences.cpp  AppPreferences.h  BackupManager.cpp  BackupManager.h  CrashReporter.cpp  CrashReporter.h  ProjectManager.cpp  ProjectManager.h  RecentProjects.cpp  RecentProjects.h  UpdateChecker.cpp  UpdateChecker.h  WindowState.cpp  WindowState.h
Source/Recording/: LiveRecordingBuffer.h  RecordingManager.cpp  RecordingManager.h
Source/Tracks/: AudioClip.cpp  AudioClip.h  MidiClip.h  Track.cpp  Track.h  TrackManager.cpp  TrackManager.h
Source/UI/: AdPanel.cpp  AdPanel.h  MasterPanel.cpp  MasterPanel.h  Meter.h  PianoRollEditor.cpp  PianoRollEditor.h  PluginManagerDialog.cpp  PluginManagerDialog.h  StartupComponent.cpp  StartupComponent.h  StatusBar.cpp  StatusBar.h  TapTempoDialog.cpp  TapTempoDialog.h  TextImageCache.h  TimelineView.cpp  TimelineView.h  TimelineView_ContextMenu.cpp  TimelineView_Drawing.cpp  TimelineView_Edit.cpp  TimelineView_EditOps.cpp  TimelineView_Markers.cpp  TimelineView_MidiEdit.cpp  TimelineView_Mouse.cpp  Toolbar.cpp  Toolbar.h  TrackHeaderPanel.cpp  TrackHeaderPanel.h  TrackHeaderView.cpp  TrackHeaderView.h  TrackHeaderView_Interaction.cpp  TrakovanLookAndFeel.h  UtawaveLookAndFeel.h
Source/VST/: PluginChain.cpp  PluginChain.h  PluginManager.cpp  PluginManager.h  PluginScannerProcess.cpp  PluginScannerProcess.h
Tests/: AdServiceTests.cpp  AppSettingsTests.cpp  AppStorageTests.cpp  AudioClipTests.cpp  AudioEngineTests.cpp  AudioFileImporterTests.cpp  BackupManagerTests.cpp  BpmDetectorTests.cpp  CrashReporterTests.cpp  EditActionsTests.cpp  ExportEngineTests.cpp  InternalSynthTests.cpp  LocalisationTests.cpp  LufsMeterTests.cpp  MeterDrawTests.cpp  MidiClipTests.cpp  MidiIoTests.cpp  PitchEngineTests.cpp  PitchToolMain.cpp  PluginActionsTests.cpp  ProjectManagerTests.cpp  RecordingTests.cpp  SilenceDetectorTests.cpp  TrackManagerTests.cpp  UpdateCheckerTests.cpp
Trakova-beta-v0.1.0/: MANUAL.html  README.txt  THIRD_PARTY_LICENSES.txt
